2005-11-26  jrandom     * Update the sorting in Syndie to consider children 'newer' than parents,       even if they have the same message ID (duh)     * Cleaned up some nav links in Syndie (good idea gloin, spaetz!)     * Added a bunch of tooltips to Syndie's fields (thanks polecat!)     * Force support for nonvalidating XML in Jetty (so we can handle GCJ/etc       better)
Monotone-Parent: 4f667cbfb60fa28151cc88a1e814a37cccbe38b2
Monotone-Revision: 93e6d1e253e15c3c70f9df70d0740eba65d3e671

Monotone-Author: jrandom
Monotone-Date: 2005-11-26T16:51:16
Monotone-Branch: i2p.i2p

--- a/apps/syndie/jsp/about.html
+++ b/apps/syndie/jsp/about.html
@@ -20,4 +20,13 @@ on new installs).  You can also use the <a href="http://forum.i2p.net/">I2P
 forums</a> if you're having trouble getting Syndie to work, and people are
 almost always around on the <a href="http://forum.i2p.net/viewtopic.php?t=952">#i2p irc
 channel</a>.</p>
+
+<p>One FAQ which might keep people from getting more posts into their Syndie
+node regards cookies.  If you get "internal errors" when using the <a
+href="syndicate.jsp">syndicate form</a>, you probably have cookies disabled. 
+Syndie needs cookies to help maintain state, and while its good practice to
+disable cookies in general, you should be able to tell your web browser to make
+an exception and allow cookies to "localhost" (or wherever your Syndie instance
+is).  Further FAQs should be found
+<a href="threads.jsp?tags=syndie.faq">within syndie</a></p>
 </body></html>
