* 2005-12-22  0.6.1.8 released 2005-12-22  jrandom     * Bundle the standalone I2PSnark launcher in the installer and update       process (launch as "java -jar launch-i2psnark.jar", viewing the       interface on http://localhost:8002/)     * Don't autostart swarming torrents by default so that you can run a       standalone I2PSnark from the I2P install dir and not have the embedded       I2PSnark autolaunch the torrents that the standalone instance is running     * Fixed a rare streaming lib bug that could let a blocking call wait       forever.
Monotone-Parent: d641070f55ce5225259d578af8cba17d9dd18ca4
Monotone-Revision: bde2522834cbfecaf3c624bc7d3b0ec91d7ccb40

Monotone-Author: jrandom
Monotone-Date: 2005-12-22T12:49:09
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p_0_6_1_8

--- a/readme.html
+++ b/readme.html
@@ -17,7 +17,7 @@ you can:</p>
          <li><a href="http://search.i2p/">search.i2p</a>: an anonymously hosted search engine of eepsites</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsite, a wiki that anyone can edit, and lots of links</li>
          <li><a href="http://dev.i2p/">dev.i2p</a>: a secure and anonymous connection to <a href="http://dev.i2p.net/">dev.i2p.net</a></li>
-         <li>Freenet proxies: <a href="http://fproxy.i2p/">fproxy.i2p</a> and <a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a></li>
+         <li>Freenet proxy: <a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a></li>
      </ul>
      There are many more eepsites - just follow the links from the ones you see,
      bookmark your favorites, and visit them often!</li>
@@ -25,8 +25,10 @@ you can:</p>
      up to your own HTTP proxy on port 4444 - simply set your browser's proxy to
      use it (as above) and go to any normal URL - your requests will be bounced
      through the I2P network.</li>
- <li><b>transfer files</b> - there is an <a href="http://i2p-bt.postman.i2p/">I2P port</a>
-     of the <a href="http://www.bittorrent.com/">BitTorrent</a> application available.</li>
+ <li><b>transfer files</b> - there is an integrated <a href="i2psnark/">port</a> of the
+     <a href="http://www.klomp.org/snark/">Snark</a> <a href="http://www.bittorrent.com/">BitTorrent</a>
+     client, which is compatible with the Python 
+     <a href="http://i2p-bt.postman.i2p/">mainline I2P-BT</a>.</li>
  <li><b>use anonymous email</b> - postman has created a mail system compatible with normal mail
      clients (POP3 / SMTP) that allows email within I2P as well as mail from and to the normal
      internet!  get your account at <a href="http://hq.postman.i2p/">hq.postman.i2p</a>.
