--- a/apps/syndie/jsp/index.html
+++ b/apps/syndie/jsp/index.html
@@ -5,7 +5,8 @@
 <img src="images/syndielogo.png" alt="" /></td>
 <td valign="top" align="left"><b>Welcome to Syndie!</b><br />
 
-<p>Jump right in and <a href="threads.jsp">read</a> syndicated posts</p>
+<p>Jump right in and read <a href="threads.jsp">discussion threads</a> or
+<a href="blogs.jsp">blogs</a></p>
 <p><a href="post.jsp">Create</a> a new post of your own</p>
 <p><a href="about.html">Learn more</a> about Syndie</p>
 </td></tr></table>
