--- a/readme.html
+++ b/readme.html
@@ -45,8 +45,9 @@ you can:</p>
 the <code>eepsite/docroot/</code> directory (or place any standard JSP/Servlet <code>.war</code>
 files under <code>eepsite/webapps</code>, or standard CGI script under <code>eepsite/cgi-bin</code>) 
 and they'll show up.  Your eepsite's 
-<i>destination</i> (which uniquely and securely identifies it) is shown on the I2PTunnel
-<a href="/i2ptunnel/">configuration page</a> - if you want other people to see your eepsite,
+<i>destination</i> (which uniquely and securely identifies it) can be found via the I2PTunnel
+<a href="/i2ptunnel/">configuration page</a> - on the details page of the "eepsite" tunnel.
+If you want other people to see your eepsite,
 you need to give them that really huge string.  Just paste it into the 
 <a href="http://forum.i2p/viewforum.php?f=16">Eepsite announce</a> forum, add it to
 ugha's <a href="http://ugha.i2p/I2pLinks">wiki</a>, <a href="http://orion.i2p/">orion's list</a>, or paste it in the #i2p or #i2p-chat channels on
