2006-02-15  jrandom     * Add in per-blog RSS feeds to Syndie     * Upgraded sucker's ROME dependency to 0.8, bundling sucked enclosures       with the posts, marking additional attachments as Media RSS enclosures       (http://search.yahoo.com/mrss/), since RSS only supports one enclosure       per item.     * Don't allow the default syndie user to be set to something invalid if       its in single user mode.
Monotone-Parent: cc0deefe74f07cf0f65d832650b74c59f748e16a
Monotone-Revision: 3611a7d2e4e2398141ea826b7e9a78387fd9ef01

Monotone-Author: jrandom
Monotone-Date: 2006-02-15T13:42:20
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -55,16 +55,8 @@ IRC (be sure to split it into two lines, as its too long for one).</p>
 
 <h2><a name="trouble">Troubleshooting</a></h2>
 
-<p>If the left hand side has a warning, telling you to check your NAT or firewall, please
-see the <a href="/config.jsp">config page</a> and make sure that you can receive <b>inbound
-TCP and UDP connections on port 8887</b> (or another port that you specify).  Problems forwarding
-that port account for the vast majority of issues people run into.  When it says 
-"Active: 72/85", the "72" means how many peers you are connected with now, and "85" means 
-how many you have spoken with recently - if that first number is 0, you can bet that there
-are firewall issues.  If the second number is under 5, you should reseed (a link on the left
-hand side of the page will show up to help you when necessary).</p>
-
-<p>If you are still having problems, you may want to review the information on the 
+<p>If, after 5 or 10 minutes, your Active: x/y count has less than 20 active
+peers, you may want to review the information on the 
 <a href="http://www.i2p.net/">I2P website</a>, post up messages to the 
 <a href="http://forum.i2p.net/">I2P discussion forum</a>, or swing by #i2p or
 #i2p-chat on IRC at <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p or irc.freshcoffee.i2p (they're linked together).</p>
