--- a/apps/syndie/jsp/about.html
+++ b/apps/syndie/jsp/about.html
@@ -3,8 +3,7 @@
 ><body bgcolor="#BBBBFF">
 
 <p>Perhaps the best introduction to Syndie can be found <a
-href="threads.jsp?post=ovpBy2mpO1CQ7deYhQ1cDGAwI6pQzLbWOm1Sdd0W06c=/1132012800001">in
-Syndie itself</a>.</p>
+href="blog.jsp?blog=ovpBy2mpO1CQ7deYhQ1cDGAwI6pQzLbWOm1Sdd0W06c=&entry=ovpBy2mpO1CQ7deYhQ1cDGAwI6pQzLbWOm1Sdd0W06c=/1132012800001">in Syndie itself</a>.</p>
 
 <p>Updates can be found by filtering for the <a
 href="threads.jsp?tags=syndie.intro">syndie.intro</a> tag (if you only want to
