2007-01-17  zzz     * Add note on Syndie index.html steering people to new Syndie
Monotone-Parent: a5c9710979de3a27d7d6db2e8228fc8fb73fcb85
Monotone-Revision: ae25a83026e14f60a84b3fe2d67467c028e536a7

Monotone-Author: zzz
Monotone-Date: 2007-01-17T05:13:27
Monotone-Branch: i2p.i2p

--- a/apps/syndie/jsp/index.html
+++ b/apps/syndie/jsp/index.html
@@ -9,6 +9,11 @@
 <a href="blogs.jsp">blogs</a></p>
 <p><a href="post.jsp">Create</a> a new post of your own</p>
 <p><a href="about.html">Learn more</a> about Syndie</p>
+<p><b>NOTE:</b> This version of Syndie is being replaced by
+<a href="http://syndie.i2p.net">the new Syndie</a>!
+The new Syndie is a standalone application under active development.
+Please give the new Syndie a try, as it has lots more traffic
+than this version. Don't expect anybody to see your posts here.</p>
 </td></tr></table>
 </div>
 </body></html>
