2007-02-13  jrandom     * Tell our peers about who we know in the floodfill netDb every       6 hours or so, mitigating the situation where peers lose track       of floodfill routers.     * Disable the Syndie updater (people should use the new Syndie,       not this one)     * Disable the eepsite tunnel by default
Monotone-Parent: e6d2e7f71d79995ba8b86e1522618d5727780f08
Monotone-Revision: f16fe4736e6018eda160866818ad309c31f56058

Monotone-Author: jrandom
Monotone-Date: 2007-02-14T04:33:36
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -3,7 +3,7 @@ grow over the next few minutes and you'll see some local "destinations" listed
 on the left (if not, <a href="#trouble">see below</a>).  Once those show up,
 you can:</p>
 <ul>
- <li><b>blog anonymously</b> - check out <a href="/syndie/">Syndie</a></li>
+ <li><b>blog anonymously</b> - check out <a href="http://syndie.i2pt/">Syndie</a></li>
  <li><b>chat anonymously</b> - fire up your own IRC client and connect to the 
      server at <b>localhost port 6668</b>.  This points at one of two anonymously hosted
      IRC servers, but neither you nor they know where the other is.</li>
@@ -44,9 +44,8 @@ you can:</p>
 <a href="http://localhost:7658/">http://localhost:7658/</a>.  Simply place your files in
 the <code>eepsite/docroot/</code> directory (or place any standard JSP/Servlet <code>.war</code>
 files under <code>eepsite/webapps</code>, or standard CGI script under <code>eepsite/cgi-bin</code>) 
-and they'll show up.  Your eepsite's 
-<i>destination</i> (which uniquely and securely identifies it) can be found via the I2PTunnel
-<a href="/i2ptunnel/">configuration page</a> - on the details page of the "eepsite" tunnel.
+and they'll show up.  After starting up an <a href="/i2ptunnel/">eepsite tunnel</a> pointing at it, your eepsite's 
+<i>destination</i> (which uniquely and securely identifies it) will be visible.
 If you want other people to see your eepsite,
 you need to give them that really huge string.  Just paste it into the 
 <a href="http://forum.i2p/viewforum.php?f=16">Eepsite announce</a> forum, add it to
