(zzz) Fix Syndie URL typo
Monotone-Parent: 96b2acd9104837cbd1825f07cce69919679f1fef
Monotone-Revision: ddf0deb13f3082ad3cb9b5997efa9885a4f872f7

Monotone-Author: zzz
Monotone-Date: 2007-02-22T08:51:14
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -3,7 +3,7 @@ grow over the next few minutes and you'll see some local "destinations" listed
 on the left (if not, <a href="#trouble">see below</a>).  Once those show up,
 you can:</p>
 <ul>
- <li><b>blog anonymously</b> - check out <a href="http://syndie.i2pt/">Syndie</a></li>
+ <li><b>blog anonymously</b> - check out <a href="http://syndie.i2p/">Syndie</a></li>
  <li><b>chat anonymously</b> - fire up your own IRC client and connect to the 
      server at <b>localhost port 6668</b>.  This points at one of two anonymously hosted
      IRC servers, but neither you nor they know where the other is.</li>
