2007-07-14  Complication     * Take the post-download routerInfo size check back out of ReseedHandler,       since it wasn't helpful, and a lower limit caused false warnings.     * Give EepGet ability to enforce a min/max HTTP response size.     * Enforce a maximum response size of 8 MB when ReseedHandler       downloads into a ByteArrayOutputStream.     * Refactor ReseedHandler/ReseedRunner from static to ordinary classes,       change invocation from RouterConsoleRunner accordingly.     * Add an EepGet status listener to ReseedHandler to log causes of reseed failure,       provide status reports to indicate the progress of reseeding.     * Enable icon for default eepsite, and the index page       of the router console (more later).
Monotone-Parent: ac9ccc3bf7045e669ee6329218c99f57f1fd62b9
Monotone-Revision: bbd574b1f9554064c76c3a075bd29fd0ece210ef

Monotone-Author: complication
Monotone-Date: 2007-07-15T00:56:18
Monotone-Branch: i2p.i2p

--- a/installer/resources/eepsite_index.html
+++ b/installer/resources/eepsite_index.html
@@ -1,6 +1,7 @@
 <html>
  <head>
   <title>Welcome to your eepsite</title>
+  <link rel="shortcut icon" href="favicon.ico" />
  </head>
  <body>
  <h1>Welcome to your eepsite</h1>
