--- a/readme.html
+++ b/readme.html
@@ -1,5 +1,5 @@
-<p>If you've just started I2P, the Active: number on the left should start to
-grow over the next few minutes and you'll see some local "destinations" listed
+<p>If you've just started I2P, the Active: numbers on the left should start to
+grow over the next few minutes and you'll see a "shared clients" local destination listed
 on the left (if not, <a href="#trouble">see below</a>).  Once those show up,
 you can:</p>
 <ul>
@@ -12,9 +12,10 @@ you can:</p>
      browse to an eepsite - 
      <ul>
          <li><a href="http://orion.i2p/">orion.i2p</a>: a site which tracks eepsite uptime and changes</li>
+         <li><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a>: a site which tracks active eepsites</li>
          <li><a href="http://forum.i2p/">forum.i2p</a>: a secure and anonymous connection to <a href="http://forum.i2p.net/">forum.i2p.net</a></li>
          <li><a href="http://www.i2p/">www.i2p</a>: a secure and anonymous connection to <a href="http://www.i2p.net/">www.i2p.net</a></li>
-         <li><a href="http://search.i2p/">search.i2p</a>: an anonymously hosted search engine of eepsites</li>
+         <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: an anonymously hosted search engine of eepsites</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsite, a wiki that anyone can edit, and lots of links</li>
          <li><a href="http://dev.i2p/">dev.i2p</a>: a secure and anonymous connection to <a href="http://dev.i2p.net/">dev.i2p.net</a></li>
          <li>Freenet proxy: <a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a></li>
@@ -27,8 +28,7 @@ you can:</p>
      through the I2P network.</li>
  <li><b>transfer files</b> - there is an integrated <a href="i2psnark/">port</a> of the
      <a href="http://www.klomp.org/snark/">Snark</a> <a href="http://www.bittorrent.com/">BitTorrent</a>
-     client, which is compatible with the Python 
-     <a href="http://i2p-bt.postman.i2p/">mainline I2P-BT</a>.</li>
+     client.</li>
  <li><b>use anonymous email</b> - postman has created a mail system compatible with normal mail
      clients (POP3 / SMTP) that allows email within I2P as well as mail from and to the normal
      internet!  get your account at <a href="http://hq.postman.i2p/">hq.postman.i2p</a>.
@@ -44,18 +44,20 @@ you can:</p>
 <a href="http://localhost:7658/">http://localhost:7658/</a>.  Simply place your files in
 the <code>eepsite/docroot/</code> directory (or place any standard JSP/Servlet <code>.war</code>
 files under <code>eepsite/webapps</code>, or standard CGI script under <code>eepsite/cgi-bin</code>) 
-and they'll show up.  After starting up an <a href="/i2ptunnel/">eepsite tunnel</a> pointing at it, your eepsite's 
-<i>destination</i> (which uniquely and securely identifies it) will be visible.
-If you want other people to see your eepsite,
-you need to give them that really huge string.  Just paste it into the 
-<a href="http://forum.i2p/viewforum.php?f=16">Eepsite announce</a> forum, add it to
-ugha's <a href="http://ugha.i2p/I2pLinks">wiki</a>, <a href="http://orion.i2p/">orion's list</a>, or paste it in the #i2p or #i2p-chat channels on
-IRC (be sure to split it into two lines, as its too long for one).</p>
+and they'll show up.  After starting up an <a href="/i2ptunnel/">eepsite tunnel</a> pointing at it, your eepsite
+will be visible to others.
+Detailed instructions for starting your eepsite are on
+<a href="http://localhost:7658/">your temporary eepsite page</a>.
+</p>
 
 <h2><a name="trouble">Troubleshooting</a></h2>
 
-<p>If, after 5 or 10 minutes, your Active: x/y count has less than 20 active
-peers, you may want to review the information on the 
+<p>Be patient - I2P may be slow to start the first time as it searches for peers.
+If, after 30 minutes, your Active: connected/recent count has less than 10 connected
+peers, you should open port 8887 on your firewall for better connectivity.
+If you cannot see any eepsites at all (even <a href="http://www.i2p">www.i2p</a>),
+be sure your browser proxy is set to localhost port 4444.
+You may also want to review the information on the 
 <a href="http://www.i2p.net/">I2P website</a>, post up messages to the 
 <a href="http://forum.i2p.net/">I2P discussion forum</a>, or swing by #i2p or
 #i2p-chat on IRC at <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p or irc.freshcoffee.i2p (they're linked together).</p>
