--- a/installer/resources/eepsite_index.html
+++ b/installer/resources/eepsite_index.html
@@ -14,16 +14,15 @@
  <a href="http://localhost:7657/i2ptunnel/edit.jsp?tunnel=3">configuration page</a>).
  The instructions below detail how to assign a name like "mysite.i2p" to your key and
  start up your eepsite.</p>
- <p>You can also reach your eepsite locally through 
- <a href="http://localhost:7658/">http://localhost:7658/</a>.  If you 
- want to change the port number, edit the file ./eepsite/jetty.xml and 
- update the I2PTunnel configuration accordingly.</p>
+ <p>You can reach your eepsite locally through 
+ <a href="http://localhost:7658/">http://localhost:7658/</a>.
+</p>
 
  <h2>Step-by-step instructions for starting your new eepsite and announcing it to the I2P community</h2>
  Your eepsite is stopped by default.
  After you start it, it will be difficult for other people to find because it
  doesn't have a name and they don't have your really long Base64 key.
- You could just tell people that really long key but thankfully i2p has an address book
+ You could just tell people that really long key, but thankfully i2p has an address book
  and several easy ways to tell people about your eepsite. Here's detailed instructions.
  <ul>
  <li>Pick a name for your eepsite (<i>something</i>.i2p). Use all lower-case.
@@ -52,44 +51,47 @@
  <li>Before you tell the world about your new eepsite, you should add some content.
      Go to i2p/eepsite/docroot and copy this document (index.html) to help.html so you can refer to it later.
      Now edit index.html and add content, pictures, and whatever you would like to share.
- <li>Now it's time to add your eepsite to an I2P address book
-     such as <a href="http://orion.i2p/">orion.i2p</a> or
-     <a href="http://trevorreznik.i2p/">trevorreznik.i2p</a>.
+ <li>Now it's time to add your eepsite to an I2P address book hosted by a site
+     such as <a href="http://stats.i2p/">stats.i2p</a>.
      That is, you must enter
      your eepsite name and key into a web interface on one or more of these sites.
-     Here is <a href="http://orion.i2p/list/">the key entry form at orion.i2p</a> and
+     Here is <a href="http://stats.i2p/i2p/addkey.html">the key entry form at stats.i2p</a>,
+     here is <a href="http://orion.i2p/list/">the key entry form at orion.i2p</a> and
      here is <a href="http://trevorreznik.i2p/host-database/">the key entry form at trevorreznik.i2p</a>.
      Again, your key is the entire "Local destination" key on the
      <a href="http://localhost:7657/i2ptunnel/edit.jsp?tunnel=3">eepsite i2ptunnel configuration page</a>.
      Be sure you get the whole thing, ending with "AAAA".
      Don't forget to click "add a key".
      Check to see if it reports the key was added.
-     Since many routers periodically get address book updates from orion or trevorreznik, within several hours others will be able to find your
+     Since many routers periodically get address book updates from these sites, within several hours others will be able to find your
      website by simply typing <i>something</i>.i2p into their browser.
- <li>Speaking of address book updates, this would be a good time to add orion, trevorreznik, or both
+ <li>Speaking of address book updates, this would be a good time to add some more addressbooks
      to your own subscription list. Go to your <a href="http://localhost:7657/susidns/subscriptions.jsp">subscriptions configuration page</a>
-     and add <a href="http://orion.i2p/hosts.txt">http://orion.i2p/hosts.txt</a> and/or
-     <a href="http://trevorreznik.i2p/hosts.txt">http://trevorreznik.i2p/hosts.txt</a> to the list and hit "Save".
+     and add a couple of these -
+     <a href="http://orion.i2p/hosts.txt">http://orion.i2p/hosts.txt</a>,
+     <a href="http://tino.i2p/hosts.txt">http://tino.i2p/hosts.txt</a>,
+     <a href="http://stats.i2p/newhosts.txt">http://stats.i2p/newhosts.txt</a>,
+     <a href="http://trevorreznik.i2p/hosts.txt">http://trevorreznik.i2p/hosts.txt</a> and hit "Save".
      Now you will get updates too!
  <li>If you are in a hurry and can't wait a few hours, you can tell people to use a "jump" address helper redirection service.
      This will work within a few minutes of your entering the key to an address book.
      Test it yourself first by entering http://orion.i2p/jump/<i>something</i>.i2p
-     or http://trevorreznik.i2p/cgi-bin/jump.php?hostname=<i>something</i>.i2p/ into your browser.
+     or http://stats.i2p/cgi-bin/jump.cgi?a=<i>something</i>.i2p or
+     or http://trevorreznik.i2p/cgi-bin/jump.php?hostname=<i>something</i>.i2p into your browser.
      Once it's working, then you can tell others to use it.
- <li>Some people check <a href="http://orion.i2p/list/">orion.i2p/list/</a> and
+ <li>Some people check eepsite lists such as
      <a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p/status.php</a> for new eepsites, so you may start getting
      a few visitors. But there are plenty of other ways to tell people. Here are a few ideas:
      <ul>
      <li>Post a message on the <a href="http://forum.i2p/viewforum.php?f=16">Eepsite announce forum</a>
          on <a href="http://forum.i2p/">forum.i2p</a>.
      <li>Tell people about it on the #i2p or #i2p-chat channels on IRC.
-     <li>Put it in a new post on <a href="syndie.i2p.net">the new Syndie</a>.
+     <li>Put it in a new post on <a href="http://syndie.i2p.net">the new Syndie</a>.
      <li>Put it in <a href="http://ugha.i2p/EepsiteIndex">Ugha's Eepsite Index Wiki</a>
      </ul>
      Note that some sites recommend pasting in that really long destination key.
      You can if you want - but
-     if you have successfully posted your key at <a href="http://orion.i2p/list/">orion</a> or
-     <a href="http://trevorreznik.i2p/host-database/">trevorreznik</a>,
+     if you have successfully posted your key at an add-key service,
      tested it using a jump service, and waited 24 hours for the
      address book update to propagate to others, that shouldn't be necessary.
  <li>If you have any questions try IRC #i2p or the
