replace orion.i2p with perv.i2p/stats.cgi
Monotone-Parent: 3bdb63aa4d781e196b9fde103625c7b88b02b8f3
Monotone-Revision: efb6146f5793101dde28078d3efa1e6714372523

Monotone-Author: zzz
Monotone-Date: 2008-01-09T22:40:33
Monotone-Branch: i2p.i2p
Monotone-Tag: 0.6.1.30-20-cvs-suck-import

--- a/readme.html
+++ b/readme.html
@@ -11,14 +11,14 @@ you can:</p>
      tell your browser to use the <b>HTTP proxy at localhost port 4444</b>, then
      browse to an eepsite - 
      <ul>
-         <li><a href="http://orion.i2p/">orion.i2p</a>: a site which tracks eepsite uptime and changes</li>
-         <li><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a>: a site which tracks active eepsites</li>
+         <li><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> and
+             <a href="http://perv.i2p/stats.cgi">perv.i2p</a>: sites tracking active eepsites</li>
          <li><a href="http://forum.i2p/">forum.i2p</a>: a secure and anonymous connection to <a href="http://forum.i2p.net/">forum.i2p.net</a></li>
          <li><a href="http://www.i2p/">www.i2p</a>: a secure and anonymous connection to <a href="http://www.i2p.net/">www.i2p.net</a></li>
          <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: an anonymously hosted search engine of eepsites</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsite, a wiki that anyone can edit, and lots of links</li>
          <li><a href="http://dev.i2p/">dev.i2p</a>: a secure and anonymous connection to <a href="http://dev.i2p.net/">dev.i2p.net</a></li>
-         <li>Freenet proxy: <a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a></li>
+         <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: Freenet proxy</li>
      </ul>
      There are many more eepsites - just follow the links from the ones you see,
      bookmark your favorites, and visit them often!</li>
