--- a/installer/resources/eepsite_index.html
+++ b/installer/resources/eepsite_index.html
@@ -70,7 +70,7 @@
      and add a couple of these -
      <a href="http://orion.i2p/hosts.txt">http://orion.i2p/hosts.txt</a>,
      <a href="http://tino.i2p/hosts.txt">http://tino.i2p/hosts.txt</a>,
-     <a href="http://stats.i2p/newhosts.txt">http://stats.i2p/newhosts.txt</a>,
+     <a href="http://stats.i2p/cgi-bin/newhosts.txt">http://stats.i2p/cgi-bin/newhosts.txt</a>,
      <a href="http://trevorreznik.i2p/hosts.txt">http://trevorreznik.i2p/hosts.txt</a> and hit "Save".
      Now you will get updates too!
  <li>If you are in a hurry and can't wait a few hours, you can tell people to use a "jump" address helper redirection service.
