--- a/readme.html
+++ b/readme.html
@@ -14,10 +14,9 @@ you can:</p>
          <li><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> and
              <a href="http://perv.i2p/stats.cgi">perv.i2p</a>: sites tracking active eepsites</li>
          <li><a href="http://forum.i2p/">forum.i2p</a>: a secure and anonymous connection to <a href="http://forum.i2p.net/">forum.i2p.net</a></li>
-         <li><a href="http://www.i2p/">www.i2p</a>: a secure and anonymous connection to <a href="http://www.i2p.net/">www.i2p.net</a></li>
+         <li><a href="http://www.i2p2.i2p/">www.i2p2.i2p</a>: a secure and anonymous connection to <a href="http://www.i2p2.de/">www.i2p2.de</a></li>
          <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: an anonymously hosted search engine of eepsites</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsite, a wiki that anyone can edit, and lots of links</li>
-         <li><a href="http://dev.i2p/">dev.i2p</a>: a secure and anonymous connection to <a href="http://dev.i2p.net/">dev.i2p.net</a></li>
          <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: Freenet proxy</li>
      </ul>
      There are many more eepsites - just follow the links from the ones you see,
@@ -58,7 +57,7 @@ peers, you should open port 8887 on your firewall for better connectivity.
 If you cannot see any eepsites at all (even <a href="http://www.i2p">www.i2p</a>),
 be sure your browser proxy is set to localhost port 4444.
 You may also want to review the information on the 
-<a href="http://www.i2p.net/">I2P website</a>, post up messages to the 
+<a href="http://www.i2p2.i2p/">I2P website</a>, post up messages to the 
 <a href="http://forum.i2p.net/">I2P discussion forum</a>, or swing by #i2p or
 #i2p-chat on IRC at <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, irc.postman.i2p or irc.freshcoffee.i2p (they're linked together).</p>
 
