2008-01-29 zzz     * Addressbook: Change default subscription     * ConfigUpdateHandler: Change default news URL     * initialNews.xml: Update version to .31     * news.xml: More updates     * hosts.txt: Add i2p-projekt.i2p     * readme.html: More URL updates     * SusiDNS: Change references to default subscription
Monotone-Parent: 203b8ba490c806ae639f9fb9de8e4056fe06e5cf
Monotone-Revision: cd134e9877bee2c6c45627cfd0d162af9fa3c078

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-01-29T22:20:04
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -14,7 +14,8 @@ you can:</p>
          <li><a href="http://inproxy.tino.i2p/status.php">inproxy.tino.i2p</a> and
              <a href="http://perv.i2p/stats.cgi">perv.i2p</a>: sites tracking active eepsites</li>
          <li><a href="http://forum.i2p/">forum.i2p</a>: a secure and anonymous connection to <a href="http://forum.i2p.net/">forum.i2p.net</a></li>
-         <li><a href="http://www.i2p2.i2p/">www.i2p2.i2p</a>: a secure and anonymous connection to <a href="http://www.i2p2.de/">www.i2p2.de</a></li>
+         <li><a href="http://www.i2p2.i2p/">www.i2p2.i2p</a> and mirror <a href="http://i2p-projekt.i2p">i2p-projekt.i2p</a>:
+              secure and anonymous connections to <a href="http://www.i2p2.de/">www.i2p2.de</a></li>
          <li><a href="http://eepsites.i2p/">eepsites.i2p</a>: an anonymously hosted search engine of eepsites</li>
          <li><a href="http://ugha.i2p/">ugha.i2p</a>: ugha's eepsite, a wiki that anyone can edit, and lots of links</li>
          <li><a href="http://fproxy.tino.i2p">fproxy.tino.i2p</a>: Freenet proxy</li>
@@ -54,7 +55,7 @@ Detailed instructions for starting your eepsite are on
 <p>Be patient - I2P may be slow to start the first time as it searches for peers.
 If, after 30 minutes, your Active: connected/recent count has less than 10 connected
 peers, you should open port 8887 on your firewall for better connectivity.
-If you cannot see any eepsites at all (even <a href="http://www.i2p">www.i2p</a>),
+If you cannot see any eepsites at all (even <a href="http://www.i2p2.i2p">www.i2p2.i2p</a>),
 be sure your browser proxy is set to localhost port 4444.
 You may also want to review the information on the 
 <a href="http://www.i2p2.i2p/">I2P website</a>, post up messages to the 
