* i2ptunnel: Add 3-hop option to edit.jsp to match configtunnels.jsp     * i2psnark: Remove orion and gaytorrents from default tracker list     * Remove orion from jump list and from eepsite_index.html     * Jbigi: Change jbigi version to 4.2.2 in build scripts - tested by amiga     * Capitalize OutboundMessageDistributor job name     * TunnelPool: Add a warning if all tunnels are backlogged
Monotone-Parent: a80e766332e2195306175da5d07faae83cabcd07
Monotone-Revision: 18c13eee594c77b137b467061c029722a14c4735

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-02-27T15:18:32
Monotone-Branch: i2p.i2p

--- a/installer/resources/eepsite_index.html
+++ b/installer/resources/eepsite_index.html
@@ -56,7 +56,7 @@
      That is, you must enter
      your eepsite name and key into a web interface on one or more of these sites.
      Here is <a href="http://stats.i2p/i2p/addkey.html">the key entry form at stats.i2p</a>,
-     here is <a href="http://orion.i2p/list/">the key entry form at orion.i2p</a> and
+     and
      here is <a href="http://trevorreznik.i2p/host-database/">the key entry form at trevorreznik.i2p</a>.
      Again, your key is the entire "Local destination" key on the
      <a href="http://localhost:7657/i2ptunnel/edit.jsp?tunnel=3">eepsite i2ptunnel configuration page</a>.
@@ -68,15 +68,14 @@
  <li>Speaking of address book updates, this would be a good time to add some more addressbooks
      to your own subscription list. Go to your <a href="http://localhost:7657/susidns/subscriptions.jsp">subscriptions configuration page</a>
      and add a couple of these -
-     <a href="http://orion.i2p/hosts.txt">http://orion.i2p/hosts.txt</a>,
      <a href="http://tino.i2p/hosts.txt">http://tino.i2p/hosts.txt</a>,
      <a href="http://stats.i2p/cgi-bin/newhosts.txt">http://stats.i2p/cgi-bin/newhosts.txt</a>,
      <a href="http://trevorreznik.i2p/hosts.txt">http://trevorreznik.i2p/hosts.txt</a> and hit "Save".
      Now you will get updates too!
  <li>If you are in a hurry and can't wait a few hours, you can tell people to use a "jump" address helper redirection service.
      This will work within a few minutes of your entering the key to an address book.
-     Test it yourself first by entering http://orion.i2p/jump/<i>something</i>.i2p
-     or http://stats.i2p/cgi-bin/jump.cgi?a=<i>something</i>.i2p or
+     Test it yourself first by entering
+     http://stats.i2p/cgi-bin/jump.cgi?a=<i>something</i>.i2p or
      or http://trevorreznik.i2p/cgi-bin/jump.php?hostname=<i>something</i>.i2p into your browser.
      Once it's working, then you can tell others to use it.
  <li>Some people check eepsite lists such as
@@ -86,7 +85,7 @@
      <li>Post a message on the <a href="http://forum.i2p/viewforum.php?f=16">Eepsite announce forum</a>
          on <a href="http://forum.i2p/">forum.i2p</a>.
      <li>Tell people about it on the #i2p or #i2p-chat channels on IRC.
-     <li>Put it in a new post on <a href="http://syndie.i2p.net">the new Syndie</a>.
+     <li>Put it in a new post on <a href="http://syndie.i2p2.de/">the new Syndie</a>.
      <li>Put it in <a href="http://ugha.i2p/EepsiteIndex">Ugha's Eepsite Index Wiki</a>
      </ul>
      Note that some sites recommend pasting in that really long destination key.
