--- a/readme.html
+++ b/readme.html
@@ -3,7 +3,7 @@ grow over the next few minutes and you'll see a "shared clients" local destinati
 on the left (if not, <a href="#trouble">see below</a>).  Once those show up,
 you can:</p>
 <ul>
- <li><b>blog anonymously</b> - check out <a href="http://syndie.i2p/">Syndie</a></li>
+ <li><b>blog anonymously</b> - check out <a href="http://syndie.i2p2.de/">Syndie</a></li>
  <li><b>chat anonymously</b> - fire up your own IRC client and connect to the 
      server at <b>localhost port 6668</b>.  This points at one of two anonymously hosted
      IRC servers, but neither you nor they know where the other is.</li>
@@ -55,7 +55,7 @@ Detailed instructions for starting your eepsite are on
 <p>Be patient - I2P may be slow to start the first time as it searches for peers.
 If, after 30 minutes, your Active: connected/recent count has less than 10 connected
 peers, you should open port 8887 on your firewall for better connectivity.
-If you cannot see any eepsites at all (even <a href="http://www.i2p2.i2p">www.i2p2.i2p</a>),
+If you cannot see any eepsites at all (even <a href="http://www.i2p2.i2p/">www.i2p2.i2p</a>),
 be sure your browser proxy is set to localhost port 4444.
 You may also want to review the information on the 
 <a href="http://www.i2p2.i2p/">I2P website</a>, post up messages to the 
