* ExploratoryPeerSelector:       - Exclude floodfill peers       - Tweak the HighCap vs. NonFailing decision     * i2psnark: Increase retries for .torrent fetch     * IRC Proxy: Prevent mIRC from sending an alternate DCC request       containing an IP     * readme.html: Reorder some items     * Stats: Add some more required stats     * Streaming lib: Fix slow start to be exponential growth,       fix congestion avoidance to be linear growth.       Should speed up local connections a lot, and remote       connections a little.
Monotone-Parent: 0d18072d5103d0e414961acc46934f0dd7a06ddb
Monotone-Revision: a0c63947cac40493f3161c1e55778585d8a77657

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-03-19T00:20:15
Monotone-Branch: i2p.i2p

--- a/readme.html
+++ b/readme.html
@@ -3,10 +3,6 @@ grow over the next few minutes and you'll see a "shared clients" local destinati
 on the left (if not, <a href="#trouble">see below</a>).  Once those show up,
 you can:</p>
 <ul>
- <li><b>blog anonymously</b> - check out <a href="http://syndie.i2p2.de/">Syndie</a></li>
- <li><b>chat anonymously</b> - fire up your own IRC client and connect to the 
-     server at <b>localhost port 6668</b>.  This points at one of two anonymously hosted
-     IRC servers, but neither you nor they know where the other is.</li>
  <li><b>browse "eepsites"</b> - on I2P there are anonymously hosted websites - 
      tell your browser to use the <b>HTTP proxy at localhost port 4444</b>, then
      browse to an eepsite - 
@@ -32,8 +28,12 @@ you can:</p>
  <li><b>use anonymous email</b> - postman has created a mail system compatible with normal mail
      clients (POP3 / SMTP) that allows email within I2P as well as mail from and to the normal
      internet!  get your account at <a href="http://hq.postman.i2p/">hq.postman.i2p</a>.
-     We bundle <a href="http://susi.i2p/">Susi's</a> <a href="/susimail/susimail">susimail</a>,
+     We bundle <a href="/susimail/susimail">susimail</a>,
      a web based anonymity-oriented pop3/smtp client configured to access postman's mail services.</li>
+ <li><b>chat anonymously</b> - fire up your own IRC client and connect to the 
+     server at <b>localhost port 6668</b>.  This points at one of two anonymously hosted
+     IRC servers, but neither you nor they know where the other is.</li>
+ <li><b>blog anonymously</b> - check out <a href="http://syndie.i2p2.de/">Syndie</a></li>
  <li>and lots more</li>
 </ul>
 
